SERVER-13853 Latent resource leak in BatchedCommandResponse::parseBSON